# test-gh-project

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_foo.py
